tests/expectations/compiler/dynamic_dispatch/dynamic_get_or_use_wrong_arg_count_fail.out
Error [ETYC0372006]: Call expected `5` args, but got `4`
    --> compiler-test:12:20
     |
  12 |     let val: u64 = _dynamic_get_or_use::[u64](prog, net, m, key);
     |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
